--- a/src/visualization/templates/index.html
+++ b/src/visualization/templates/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="../static/js/nav.js" type='text/javascript'></script>
+<link rel="stylesheet" href="../static/css/index.css">
 
 <body>
 
@@ -29,11 +29,58 @@
 <!-- Header -->
 <header class="w3-container w3-blue w3-center" style="padding:128px 16px">
     <h1 class="w3-margin w3-jumbo">Profile Anyone</h1>
-    <p class="w3-xlarge">Just type a twitter username in the following form!</p>
+    <p class="w3-xlarge">Just type a twitter username and the number of rows in the following form!</p>
     <form action="/profile" method="post">
-        <input style="border-top: 2px!important; padding: 13px 24px!important;" type="text" name="username"/>
+        <input style="border-top: 2px!important; padding: 13px 24px!important;" type="text" name="username" placeholder="Username"/>
+        <input id="rows" style="border-top: 2px!important; padding: 13px 24px!important;" type="text" name="rows" placeholder="Rows"/>
         <input class="w3-button w3-black w3-padding-large w3-large" style="margin-bottom: 2px!important;" type="submit" value="Profile">
     </form>
+    <div id="checkboxes">
+        <div class="container">
+            <div class="checkbox">
+                <label class="switch" for="checkbox1">
+                    <input type="checkbox" id="checkbox1"  />
+                    <div class="slider round"></div>
+                </label>
+                <p>Extractor</p>
+            </div>
+            <div>
+                <label class="switch" for="checkbox3">
+                    <input type="checkbox" id="checkbox3" />
+                    <div class="slider round"></div>
+                </label>
+                <p>Cleaner</p>
+            </div>
+            <div>
+                <label class="switch" for="checkbox4">
+                    <input type="checkbox" id="checkbox4" />
+                    <div class="slider round"></div>
+                </label>
+                <p>Analyser</p>
+            </div>
+            <div>
+                <label class="switch" for="checkbox5">
+                    <input type="checkbox" id="checkbox5" />
+                    <div class="slider round"></div>
+                </label>
+                <p>Modeller</p>
+            </div>
+            <div>
+                <label class="switch" for="checkbox6">
+                    <input type="checkbox" id="checkbox6" />
+                    <div class="slider round"></div>
+                </label>
+                <p>Labelling</p>
+            </div>
+            <div>
+                <label class="switch" for="checkbox7">
+                    <input type="checkbox" id="checkbox7" />
+                    <div class="slider round"></div>
+                </label>
+                <p>Classifier</p>
+            </div>
+        </div>
+    </div>
 </header>
 
 <!-- First Grid -->
